--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,9 +5,7 @@
     %title #{content_for?(:page_title) ? yield(:page_title) + " - L'Assemblée constituante citoyenne du Québec" : "L'Assemblée constituante citoyenne du Québec"}
     %meta{:content => "width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no", :name => "viewport"}
     %meta{:name => "viewport", :content => "initial-scale=1.0, user-scalable=no"}
-    %meta{:content => "", :name => "description"}
-    %meta{:content => "", :name => "author"}
-
+    %meta{:content => "Assemblée constituante citoyenne du Québec. Ensemble, constituons le Québec.", :name => "description"}
     / Le HTML5 shim, for IE6-8 support of HTML5 elements
     /[if lt IE 9]
       = javascript_include_tag "https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js", "https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"
