--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -6,6 +6,9 @@
 
 .row
   .col-md-6
+    %h3 Nouveau CO, bilan et priorités pour 2016
+    %p
+      =link_to "Télécharger le communiquer", asset_path("communique.pdf"), target: "_blank", class: "btn btn-info"
     -if @next_event
       %h3.sub-section À ne pas manquer
 
