--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -6,9 +6,12 @@
 
 .row
   .col-md-6
-    %h3 Nouveau CO, bilan et priorités pour 2016
-    %p
-      =link_to "Télécharger le communiqué", asset_path("communique.pdf"), target: "_blank", class: "btn btn-info"
+    %h3 Communiqués
+    %ul
+      %li= link_to "Communiqué du 22 janvier", asset_path("communique_22_janvier.pdf"), target: "_blank"
+
+      %li= link_to "Nouveau CO, bilan et priorités pour 2016", asset_path("communique.pdf"), target: "_blank"
+
     -if @next_event
       %h3.sub-section À ne pas manquer
 
