--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -1,11 +1,15 @@
 .well
-  %h2.no-margin
+  %h3.no-margin
     Nous, <b>Constituantes et Constituants</b>, nous nous engageons à promouvoir, à préparer et à exiger la convocation d’une Assemblée constituante non partisane, libre dans ses délibérations, et à tout mettre en œuvre pour que soit respectée la volonté du peuple québécois.
   %p
-    #{link_to "<i class='fa fa-pencil-square-o'></i> Nous vous invitons à vous engager avec NOUS. <b>Signez le manifeste!</b>".html_safe, manifest_path, class: "btn btn-danger btn-lg", id: "#sign-manifest"}
+    #{link_to "<i class='fa fa-pencil-square-o'></i> Nous vous invitons à vous engager avec NOUS. <b>Signez le manifeste!</b>".html_safe, manifest_path, class: "btn btn-danger", id: "#sign-manifest"}
 
 .row
   .col-md-6
+    %h3= link_to "Questionnaire, Bilan de la situation, ACCQ", questionnaire_bilan_path
+    %div
+      =link_to image_tag("questionnaire-bilan.jpg"), questionnaire_bilan_path,  class: "img-responsive"
+      %b IMPORTANT : EXPRIMEZ-VOUS AU PLUS TARD LE 6 MARS 2016
     %h3 Communiqués
     %ul
       %li= link_to "Communiqué du 22 janvier", asset_path("communique_22_janvier.pdf"), target: "_blank"
