--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -99,4 +99,5 @@
           Assemblée constituante citoyenne du Québec @#{Date.today.year}
           \-                    
           #{link_to "À propos du site web", a_propos_path}
-      %script  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');  ga('create', 'UA-74182715-1', 'auto');  ga('send', 'pageview');
+      -if Rails.env.production?
+        %script  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');  ga('create', 'UA-74182715-1', 'auto');  ga('send', 'pageview');
