--- a/app/views/home/questionnaire_bilan.haml
+++ b/app/views/home/questionnaire_bilan.haml
@@ -12,7 +12,7 @@
     %div
       %br/
       %br/
-      Téléchargez le questionnaire : #{link_to "Questionnaire, Bilan de la situation, ACCQ", asset_path("Questionnaire-bilan-février-ACCQ.pdf"), target: "_blank"}.
+      Téléchargez le questionnaire : #{link_to "Questionnaire, Bilan de la situation, ACCQ", home_download_pdf_url}.
       %br/
       %br/
       %b IMPORTANT : EXPRIMEZ-VOUS AU PLUS TARD LE 6 MARS 2016
