questionnaire: utiliser la même méthode pour le download du pdf que pour l'affichage de la page html

--- a/app/views/home/questionnaire_bilan.haml
+++ b/app/views/home/questionnaire_bilan.haml
@@ -12,7 +12,7 @@
     %div
       %br/
       %br/
-      Téléchargez le questionnaire : #{link_to "Questionnaire, Bilan de la situation, ACCQ", home_download_pdf_url}.
+      Téléchargez le questionnaire : #{link_to "Questionnaire, Bilan de la situation, ACCQ", questionnaire_bilan_path(format: :pdf)}.
       %br/
       %br/
       %b IMPORTANT : EXPRIMEZ-VOUS AU PLUS TARD LE 6 MARS 2016
