FM: Changement du CO dans la page "Nous joindre" + ajout du questionnaire bilan Facebook

--- a/app/views/home/nous_joindre.haml
+++ b/app/views/home/nous_joindre.haml
@@ -6,10 +6,7 @@
 .row
   .col-md-12    
     %p
-      Lors de la dernière rencontre nationale à Drummondville, l’assemblée a créé un <b>Conseil des Opérations Intérimaire</b> (C.O.I.). Ce conseil est formé de sept membres dont, une secrétaire, un trésorier et 5 conseillers (administrateurs) et il a le mandat de poursuivre la mise en place de la structure organisationnelle nécessaire pour l’atteinte de nos objectifs et de préparer un projet d'un organisme sans but lucratif. (OSBL)
-
-    %p
-      %i Le mandat du C.O.I. se termine le 31 décembre 2015.
+      Lors de la dernière rencontre nationale tenue à Saint-Lambert les 12 et 13 décembre 2015, l’assemblée a élu un Conseil des opérations intérimaire (COI). Ce conseil est formé des sept membres suivants :
 
     %table.table.table-striped
       %thead
@@ -18,26 +15,26 @@
           %th Citoyen.ne
       %tbody
         %tr
-          %td Secrétaire
-          %td Martine Labossière
+          %td Mobilisation
+          %td Jean-Pierre Blanchard
         %tr
-          %td Trésorier
+          %td Éducation
+          %td Delphine Colignon
+        %tr
+          %td Financement et trésorie
           %td Marc Dion
         %tr
-          %td Conseiller
-          %td Jean-Philippe Thouin
+          %td Communications
+          %td Maxime Gagnon
         %tr
-          %td Conseiller
-          %td Carl Hurtubise
+          %td Secrétariat et registrariat
+          %td Maxime Gingras
         %tr
-          %td Conseiller
-          %td Rémi Lesmerises
+          %td Résolution de problèmes
+          %td Renée Pronovost
         %tr
-          %td Conseiller
-          %td Daniel Dion
-        %tr
-          %td Conseiller
-          %td Alain Marquis Bergeron
+          %td Web
+          %td René Philippe Viens
 
 
 
