--- a/app/views/home/questionnaire_bilan.haml
+++ b/app/views/home/questionnaire_bilan.haml
@@ -10,12 +10,18 @@
       =image_tag "questionnaire-bilan.jpg", class: "img-responsive"
   .col-md-8
     %div
+      Sondage en ligne (<font color="#00AA00">recommandé</font>) : 
+      %br/
+      :plain
+        <a href="https://sondage.fb-app.co/bilan-accq" target="_blank">Section&nbsp;1</a>  <a href="https://sondage.fb-app.co/sondage-accq-section-2" target="_blank">Section&nbsp;2</a>  <a href="https://sondage.fb-app.co/sondage-accq-section-3" target="_blank">Section&nbsp;3</a>  <a href="https://sondage.fb-app.co/sondage-accq-section-4" target="_blank">Section&nbsp;4</a>  <a href="https://sondage.fb-app.co/sondage-accq-section-5" target="_blank">Section&nbsp;5</a>
       %br/
       %br/
-      Téléchargez le questionnaire : #{link_to "Questionnaire, Bilan de la situation, ACCQ", questionnaire_bilan_path(format: :pdf)}.
+      Questionnaire PDF (<font color="#AA0000">utilisateurs avertis</font>) :
+      %br/
+      #{link_to "Questionnaire, Bilan de la situation, ACCQ", questionnaire_bilan_path(format: :pdf)}.
       %br/
       %br/
-      %b IMPORTANT : EXPRIMEZ-VOUS AU PLUS TARD LE 6 MARS 2016
+      %b IMPORTANT : EXPRIMEZ-VOUS AU PLUS TARD LE 14 MARS 2016
       %br/
       %br/
 
@@ -34,7 +40,7 @@
 
     %p Si la cause de l’ACCQ nous tient à cœur, si l’avenir du mouvement nous importe, alors notre participation à ce sondage est plus qu’importante : elle est cruciale.
 
-    %p Faites vite! La date limite pour retourner le questionnaire est le <strong>6 mars 2016</strong>. 
+    %p Faites vite! La date limite pour retourner le questionnaire est le <strong>14 mars 2016</strong>. 
 
     %p Exprimons-nous aujourd’hui pour mieux décider demain!
 
