--- a/app/views/home/promotional_tools.haml
+++ b/app/views/home/promotional_tools.haml
@@ -2,7 +2,11 @@
   Promouvoir
 
 -breadcrumb :promotional_tools
-
+.row
+  .col-md-12
+    %h2.sub-section Portez fièrement votre macaron sur Facebook!
+    %p.lead
+      Nous vous invitons à modifier votre photo de profil Facebook afin de #{link_to "porter nos couleurs dès maintenant!", "http://www.onlinebadgemaker.com/badge/2354", target: "_blank"}
 .row
   .col-md-12
     %h2.sub-section Tracts à distribuer
