FM: Enlever le questionnaire bilan + Correction des membres du COI

--- a/app/views/home/nous_joindre.haml
+++ b/app/views/home/nous_joindre.haml
@@ -6,7 +6,7 @@
 .row
   .col-md-12    
     %p
-      Lors de la dernière rencontre nationale tenue à Saint-Lambert les 12 et 13 décembre 2015, l’assemblée a élu un Conseil des opérations intérimaire (COI). Ce conseil est formé des sept membres suivants :
+      Lors de la dernière rencontre nationale tenue à Saint-Lambert les 12 et 13 décembre 2015, l’assemblée a élu un Conseil des opérations intérimaire (COI). Ce conseil était formé de sept membres. Après trois démissions, l’actuel COI est formé des membres suivants :
 
     %table.table.table-striped
       %thead
@@ -15,25 +15,16 @@
           %th Citoyen.ne
       %tbody
         %tr
-          %td Mobilisation
+          %td Conseiller
           %td Jean-Pierre Blanchard
         %tr
-          %td Éducation
-          %td Delphine Colignon
-        %tr
-          %td Financement et trésorie
+          %td Trésorier
           %td Marc Dion
         %tr
-          %td Communications
-          %td Maxime Gagnon
-        %tr
-          %td Secrétariat et registrariat
+          %td Conseiller
           %td Maxime Gingras
         %tr
-          %td Résolution de problèmes
-          %td Renée Pronovost
-        %tr
-          %td Web
+          %td Conseiller
           %td René Philippe Viens
 
 
