Ajouter les vidéos avec Étienne Chouard (15 mai 2016) dans la médiathèque. ticket: #27

--- a/app/views/home/mediatheque.haml
+++ b/app/views/home/mediatheque.haml
@@ -4,58 +4,76 @@
 -breadcrumb :mediatheque
 
 .row
-  .col-md-6    
+  .col-md-6
     .thumbnail
       .youtube-container
-        .youtube-player{"data-id" => "YiwqudxfQIQ"}    
-
-  .col-md-6    
+        .youtube-player{"data-id" => "e_ow-sGGSf4"}
+  .col-md-6
+    .thumbnail
+      .youtube-container
+        .youtube-player{"data-id" => "UdE3bWyswmc"}
+  .col-md-6
+    .thumbnail
+      .youtube-container
+        .youtube-player{"data-id" => "p7f3tiaSAUw"}
+  .col-md-6
+    .thumbnail
+      .youtube-container
+        .youtube-player{"data-id" => "nQqzzfblEPE"}
+  .col-md-6
+    .thumbnail
+      .youtube-container
+        .youtube-player{"data-id" => "aF16IZtZmMA"}
+  .col-md-6
+    .thumbnail
+      .youtube-container
+        .youtube-player{"data-id" => "YiwqudxfQIQ"}
+  .col-md-6
     .thumbnail
       .youtube-container
         .youtube-player{"data-id" => "JLrKsEP_Vrw"}
-  .col-md-6    
+  .col-md-6
     .thumbnail
       .youtube-container
-        .youtube-player{"data-id" => "pvR3yU2KB44"}    
+        .youtube-player{"data-id" => "pvR3yU2KB44"}
 
-  .col-md-6    
+  .col-md-6
     .thumbnail
       .youtube-container
-        .youtube-player{"data-id" => "YnKJn2_3Dzk"}    
-
-  .col-md-6    
+        .youtube-player{"data-id" => "YnKJn2_3Dzk"}
+  .col-md-6
     .thumbnail
       .youtube-container
         .youtube-player{"data-id" => "36HRbEX02zA"}
-  .col-md-6    
+  .col-md-6
     .thumbnail
       .youtube-container
         .youtube-player{"data-id" => "FD-H3cjcna0"}
-  .col-md-6    
+  .col-md-6
     .thumbnail
       .youtube-container
-        .youtube-player{"data-id" => "mEZDtjBF55I"}    
-  .col-md-6    
+        .youtube-player{"data-id" => "mEZDtjBF55I"}
+  .col-md-6
     .thumbnail
       .youtube-container
         .youtube-player{"data-id" => "ZWSXU0mCxT0"}
-  .col-md-6    
+  .col-md-6
     .thumbnail
       .youtube-container
         .youtube-player{"data-id" => "oN5tdMSXWV8"}
-  .col-md-6    
+  .col-md-6
     .thumbnail
       .youtube-container
         .youtube-player{"data-id" => "KVW5ogGDlts"}
-  .col-md-6    
+  .col-md-6
     .thumbnail
       .youtube-container
         .youtube-player{"data-id" => "l0YaOyPwRiQ"}
-  .col-md-6    
+  .col-md-6
     .thumbnail
       .youtube-container
         .youtube-player{"data-id" => "dcmkAG3fESE"}
-  .col-md-6    
+  .col-md-6
     .thumbnail
       .youtube-container
         .youtube-player{"data-id" => "wfuT3w0fRRU"}
@@ -70,11 +88,11 @@
           v[n].appendChild(p);
       }
   })();
-   
+
   function labnolThumb(id) {
       return '<img class="youtube-thumb" src="//i.ytimg.com/vi/' + id + '/hqdefault.jpg"><div class="play-button"></div>';
   }
-   
+
   function labnolIframe() {
       var iframe = document.createElement("iframe");
       iframe.setAttribute("src", "//www.youtube.com/embed/" + this.parentNode.dataset.id + "?autoplay=1&autohide=2&border=0&wmode=opaque&enablejsapi=1&controls=1&showinfo=0");
