--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -10,7 +10,7 @@
       %h3.sub-section À ne pas manquer
 
       %p
-        %strong Quoi? 
+        %strong Quoi?
         = @next_event.name
         %br/
         %strong Quand?
@@ -25,24 +25,26 @@
 
     %h3.sub-section Joignez-vous à NOUS!
     .youtube-container
-      .youtube-player{"data-id" => "YiwqudxfQIQ"}    
+      .youtube-player{"data-id" => "YiwqudxfQIQ"}
 
     %p Plusieurs autres vidéos sont disponibles dans la #{link_to "médiathèque", mediatheque_path}!
 
 
     %h3.sub-section Aimez notre page Facebook
     :plain
-      <div class="fb-page" data-href="https://www.facebook.com/ConstituanteCitoyenne?fref=ts" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/ConstituanteCitoyenne?fref=ts"><a href="https://www.facebook.com/ConstituanteCitoyenne?fref=ts">Assemblée constituante citoyenne du Québec</a></blockquote></div></div>    
-  
+      <div class="fb-page" data-href="https://www.facebook.com/ConstituanteCitoyenne?fref=ts" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/ConstituanteCitoyenne?fref=ts"><a href="https://www.facebook.com/ConstituanteCitoyenne?fref=ts">Assemblée constituante citoyenne du Québec</a></blockquote></div></div>
+
 
   .col-md-6
-    %h3.sub-section Pour rejoindre votre Assemblée constituante régionale québecoise (ACRQ) 
+    %h3.sub-section Pour rejoindre votre Assemblée constituante régionale québecoise (ACRQ)
 
     .row
       -@hives.each_with_index do |h,index|
-        .col-md-4.col-xs-6  
+        .col-md-4.col-xs-6
           .thumbnail
             =image_tag(h.image.url)
+            #{show_hive_number(h.number)} - #{h.name}
+
             .caption
               Région #{show_hive_number(h.number)}
               %br/
@@ -54,10 +56,10 @@
         -if (index+1) % 2 == 0
           .clearfix.visible-xs.visible-sm
         -if (index+1) % 3 == 0
-          .clearfix.visible-md.visible-lg          
+          .clearfix.visible-md.visible-lg
 :javascript
-  $( document ).ready(function() {      
-   
+  $( document ).ready(function() {
+
       $('.thumbnail').hover(
           function(){
               $(this).find('.caption').slideDown(250); //.fadeIn(250)
@@ -65,27 +67,27 @@
           function(){
               $(this).find('.caption').slideUp(250); //.fadeOut(205)
           }
-      ); 
+      );
   });
 
   (function() {
       var v = document.getElementsByClassName("youtube-player");
-      for (var n = 0; n < v.length; n++) {          
+      for (var n = 0; n < v.length; n++) {
           var p = document.createElement("div");
           p.innerHTML = labnolThumb(v[n].dataset.id);
           p.onclick = labnolIframe;
           v[n].appendChild(p);
       }
   })();
-   
+
   function labnolThumb(id) {
       return '<img class="youtube-thumb" src="//i.ytimg.com/vi/' + id + '/hqdefault.jpg"><div class="play-button"></div>';
   }
-   
+
   function labnolIframe() {
       var iframe = document.createElement("iframe");
       iframe.setAttribute("src", "//www.youtube.com/embed/" + this.parentNode.dataset.id + "?autoplay=1&autohide=2&border=0&wmode=opaque&enablejsapi=1&controls=1&showinfo=0");
       iframe.setAttribute("frameborder", "0");
       iframe.setAttribute("id", "youtube-iframe");
       this.parentNode.replaceChild(iframe, this);
-  }  
+  }
